重构utils包并优化主界面逻辑
将原有utils、manager、network、ui.dialog等相关类统一迁移至utils包，删除冗余的OkHttpClientManager和DialogHelper实现，统一引用路径。主界面MainActivity大幅优化，修复历史记录、搜索、音质选择等逻辑问题，精简冗余注释，提升代码可读性和维护性。其余Activity同步适配新包结构。